# nelikvid.kg

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_category_alter_product_options_remove_product_sales_and_more.py  0003_alter_category_options_alter_product_options_and_more.py  0004_alter_product_created_by_and_more.py  0005_alter_product_created_by_and_more.py  0006_alter_product_category_remove_productimage_product_and_more.py  0007_remove_product_created_at_alter_product_category.py  0008_alter_product_name.py  0009_alter_product_category.py  0010_category_alter_product_category.py  0011_alter_product_category_delete_category.py  0012_category_alter_product_category.py  0013_remove_category_slug.py  0014_rename_name_category_name_category.py  0015_alter_category_name_category_review.py  0016_question.py
